add app kind and services and workers
